[gd_scene load_steps=7 format=3 uid="uid://dqy5nf5dtwl5f"]

[ext_resource type="Script" path="res://globals/MusicPlayer.gd" id="1_e4hwj"]
[ext_resource type="AudioStream" uid="uid://badu3ioaoe0d" path="res://sounds/music/music2.mp3" id="2_x6v2l"]
[ext_resource type="AudioStream" uid="uid://dtxiergalbacv" path="res://sounds/music/game_music.mp3" id="3_wxm2t"]

[sub_resource type="Animation" id="Animation_c3qrp"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu_music:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("game_music:pitch_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_5soqx"]
resource_name = "oscilate"
length = 10.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("game_music:pitch_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5, 10),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.8, 1.4, 0.8]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menu_music:pitch_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.8, -0.25, 0, 0.25, 0, 1.4, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 5, 10)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uhm64"]
_data = {
"RESET": SubResource("Animation_c3qrp"),
"oscilate": SubResource("Animation_5soqx")
}

[node name="MusicPlayer" type="Node"]
script = ExtResource("1_e4hwj")

[node name="menu_music" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("2_x6v2l")
bus = &"Music"

[node name="game_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_wxm2t")
bus = &"Music"

[node name="SillyMachine" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uhm64")
}
